# ai-war-game

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  INSTALL.md  LICENSE  README.md  docker-entrypoint.sh  main.py  prek.toml  pyproject.toml  run.sh
docs/superpowers/plans/: 2026-04-25-hermes-removal.md  2026-04-25-hermes-skill-migration.md
docs/superpowers/specs/: 2026-04-23-three-kingdoms-game-design.md  2026-04-24-first-runnable-version-design.md  2026-04-24-player-takeover-design.md  2026-04-24-settlement-network-design.md  2026-04-25-hermes-removal-design.md  2026-04-25-hermes-skill-migration-design.md  index.md
hermes-skill/: SKILL.md
hermes-skill/lib/: hermes_client.py  llm_client.py
hermes-skill/scripts/: agent_comm.py  autonomy.py  battle.py  db.py  init_prompt.txt  init_scenario.py  soul_general.txt  time_engine.py  view.py
src/ai_war_game/: __init__.py  __main__.py  autonomy.py  battle.py  cli.py  db.py  engine.py  init_scenario.py  llm.py  models.py  view.py
src/ai_war_game/application/: create_game.py  dto.py  execute_command.py  list_saves.py  ports.py  show_game.py
src/ai_war_game/cli/: app.py  exit_codes.py  formatting.py
src/ai_war_game/cli/commands/: command.py  list_saves.py  new_game.py  show.py
src/ai_war_game/domain/: command.py  errors.py  events.py  identity.py  scenario.py  session.py  world.py
src/ai_war_game/infrastructure/hermes/: client.py  health.py  parser.py  prompts.py
src/ai_war_game/infrastructure/persistence/: codecs.py  file_repository.py  paths.py
src/ai_war_game/interfaces/: envelope.py
tests/: conftest.py
tests/integration/: test_cli_help.py  test_command_flow.py  test_list_saves_flow.py  test_new_game_flow.py  test_show_flow.py
tests/unit/: conftest.py  test_llm.py  test_smoke.py
tests/unit/application/: test_create_game.py  test_execute_command.py  test_list_saves.py  test_show_game.py
tests/unit/domain/: test_command.py  test_events.py  test_identity.py  test_scenario.py  test_session.py  test_world.py
tests/unit/hermes_skill/: test_agent_comm.py  test_battle.py  test_cli.py  test_db.py  test_game_loop.py  test_hermes_client.py  test_init_scenario.py  test_llm_client.py  test_time_engine.py  test_view.py
tests/unit/infrastructure/: test_codecs.py  test_file_repository.py  test_hermes_client.py  test_hermes_health.py  test_hermes_parser.py  test_paths.py
tests/unit/interfaces/: test_envelope.py
tools/: install-skill.sh  run_pytest_hook.py
