[project]
name = "ai-war-game"
version = "0.1.0"
description = "AI-driven sandbox warfare game built on Hermes Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_war_game"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src", "hermes-skill/lib", "hermes-skill/scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "hermes-skill/lib", "hermes-skill/scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
