[project]
name = "ai-war-game"
version = "0.2.0"
description = "AI-driven sandbox warfare game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["litellm>=1.60.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ai-war-game = "ai_war_game.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "SIM117"]
"src/ai_war_game/*.py" = ["RUF001"]  # Chinese punctuation intentional in game text
